<resources>
    <string name="app_name">FinalProjectPAM</string>
    <string name="title_home">Home</string>
    <string name="title_asset">Asset</string>
    <string name="title_kategori">Kategori</string>
    <string name="title_pendapatan">Pendapatan</string>
    <string name="title_pengeluaran">Pengeluaran</string>
    <string name="title_insert">Insert Asset</string>
    <string name="add_asset">Add Asset</string>
    <string name="add_kategori">Add Kategori</string>
    <string name="add_pendapatan">Add Pendapatan</string>
    <string name="add_pengeluaran">Add Pengeluaran</string>
    <string name="edit_asset">Edit Asset</string>
    <string name="edit_kategori">Edit Kategori</string>
    <string name="loading_failed">Failed to Load</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>
</resources>